<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="100sp"
        android:text="@string/open_source_app_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#707070"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="10sp"
        android:text="@string/open_source_app_link"
        android:textSize="16sp"
        android:textColorLink="#e05030"
        android:textStyle="normal"
        android:autoLink="web"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="50sp"
        android:text="@string/open_source_drawer_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#707070"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="10sp"
        android:text="@string/open_source_drawer_sample_link"
        android:textSize="16sp"
        android:textColorLink="#e05030"
        android:autoLink="web"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="10sp"
        android:text="@string/open_source_drawer_link"
        android:textSize="16sp"
        android:textColorLink="#e05030"
        android:autoLink="web"
        />

</LinearLayout>
