<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30sp"
    android:orientation="vertical"
    android:background="@color/bg_color">


    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="50sp"
        android:hint="@string/task_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_task_description"
        android:inputType="textMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:hint="@string/task_description" />

    <CheckBox android:id="@+id/checkbox_week_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/task_week"/>

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_add_task"
        android:textColor="@color/color_white"
        android:background="@color/primary"
        android:padding="5sp"

        android:onClick="onBtnAddTaskClick"/>



</LinearLayout>
